--- a/todo.css
+++ b/todo.css
@@ -13,7 +13,7 @@
 .todo-app
 {
 width:540px;
-background:#ffff;
+background-color:#ffff;
 margin:100px auto 20px;
 padding:40px 30px 70px;
 border-radius:10px;
@@ -36,6 +36,9 @@ margin-bottom:20px;
     border-radius: 30px;
     padding-left: 20px;
     margin-bottom: 25px;
+    margin-top: 5;
+    margin-left: 25%;
+    width: 50%;
 }
 input{
     flex: 1;
@@ -56,7 +59,7 @@ button{
 }
 ul li{
     list-style: none;
-    font-size: 17px;
+    font-size: 20px;
     padding: 12px 8px 12px 50px;
     user-select: none;
     cursor: pointer;
@@ -75,7 +78,7 @@ ul li::before{
     left: 8px;
 }
 ul li.checked{
-    color: #555;
+    color:white;
     text-decoration: line-through;
 }
 ul li.checked::before{
@@ -89,10 +92,12 @@ ul li span{
     width: 40px;
     height: 40px;
     font-size: 22px;
-    color: #555;
+    color:white;
     line-height: 40px;
     text-align: center;
 }
 ul li span:hover{
     background: #edeef0;
+    color: black;
+    border-radius: 50%;
 }
